hphp/hack/test/typecheck/ambiguous_inheritance.php.exp
File "ambiguous_inheritance.php", line 11, characters 16-16:
Class C does not correctly implement all required methods  (Typing[4110])
File "ambiguous_inheritance.php", line 11, characters 33-34:
Some methods are incompatible with those declared in type I2
Read the following to see why:
File "ambiguous_inheritance.php", line 4, characters 28-30:
Member foo has the wrong type
File "ambiguous_inheritance.php", line 8, characters 35-37:
This is an int
File "ambiguous_inheritance.php", line 4, characters 35-39:
It is incompatible with a mixed value
File "ambiguous_inheritance.php", line 4, characters 28-30:
This declaration was inherited from an object of type I1. Redeclare this member in C with a compatible signature.
